# palya

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
benchmarks/: bench.sh  create.py
example_site/: palya.toml
example_site/content/: about.md  hello.md  index.md  welcome.md
example_site/content/blog/: hello.md  welcome.md
example_site/content/projects/: project1.md
example_site/static/: search.js  style.css
example_site/templates/: about.j2  base.j2  index.j2  post.j2  project.j2  tag.j2
src/: cmd.rs  lib.rs  main.rs
src/domain/: models.rs
src/engine/: builder.rs
src/io/: fs.rs
test_bench/: palya.toml
test_bench/content/: hello.md
test_bench/templates/: index.j2  index.jinja  post.html  post.j2  post.jinja
tests/: cli_test.rs
