[package]
name = "palya"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
minijinja = { version = "2.14.0", features = ["loader"] }
pulldown-cmark = "0.13.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
toml = "0.9.10"
walkdir = "2.5.0"
