[package]
name = "palya"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.3"
clap = { version = "4.5.53", features = ["derive"] }
minijinja = { version = "2.14.0", features = ["loader"] }
once_cell = "1.19"
pulldown-cmark = "0.13.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
syntect = { version = "5.3.0", default-features = false, features = [
    "default-fancy",
    "html",
] }
toml = "0.9.10"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
